完成自定义控件SettingItemView,完成点击查找手机时弹出对话框输入密码
将密码通过md5加密,设置md5工具,完善SettingItemView自定义,依据用户是否勾选来确定控件内容

--- a/MobileSafe/res/layout/activity_setting.xml
+++ b/MobileSafe/res/layout/activity_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:phy="http://schemas.android.com/apk/res/com.phy.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -9,14 +10,14 @@
         android:text="设置中心" />
 
     
-    <!-- 
+    
     <com.phy.mobilesafe.view.SettingItemView
         android:id="@+id/siv_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        itheima:desc_off="自动更新已关闭"
-        itheima:desc_on="自动更新已开启"
-        itheima:title="自动更新设置" />
- -->
+        phy:desc_off="自动更新已关闭"
+        phy:desc_on="自动更新已开启"
+        phy:title="自动更新设置" />
+
  
 </LinearLayout>
