--- a/MobileSafe/res/layout/dailog_input_password.xml
+++ b/MobileSafe/res/layout/dailog_input_password.xml
@@ -17,7 +17,7 @@
         />
     
     <EditText 
-        android:id="@+id/te_password"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="请输入密码"
