--- a/MobileSafe/res/layout/activity_setup2.xml
+++ b/MobileSafe/res/layout/activity_setup2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:phy="http://schemas.android.com/apk/res/com.phy.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -19,7 +20,7 @@
     <TextView
         style="@style/ContentStyle"
         android:text="就会发送报警短信" />
-<!-- 
+
     <com.phy.mobilesafe.view.SettingItemView
         android:id="@+id/siv_sim"
         android:layout_width="match_parent"
@@ -27,7 +28,7 @@
         phy:desc_off="sim卡没有绑定"
         phy:desc_on="sim卡已经绑定"
         phy:title="点击绑定sim卡" />
- -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
