--- a/MobileSafe/res/layout/activity_home.xml
+++ b/MobileSafe/res/layout/activity_home.xml
@@ -5,14 +5,8 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#8866ff00"
-        android:gravity="center"
-        android:text="功能列表"
-        android:textColor="@color/black"
-        android:textSize="22sp" />
+        style="@style/TitleStyle"
+        android:text="功能列表" />
 <!-- android:ellipsize 以横向滚动方式显示 -->
     <TextView
         android:layout_width="match_parent"
