--- a/MobileSafe/res/layout/activity_setup3.xml
+++ b/MobileSafe/res/layout/activity_setup3.xml
@@ -18,6 +18,7 @@
         android:text="报警短信会发送给安全号码" />
 
     <EditText
+        android:id="@+id/et_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="请输入或选择安全号码" />
@@ -25,6 +26,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="selectContact"
         android:background="@drawable/btn_light_green_selector"
         android:text="请选择联系人" />
 
